# SubStreak

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PATCH_NOTES.md  PLAN.md  index.html  package.json  vite.config.ts
scripts/: package-release.mjs  publish-release.mjs  version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  lib.rs  main.rs  overlay.html  overlay.rs  twitch_session.rs
src/components/: CelebrationBanner.tsx  CopyButton.tsx  Modal.tsx  OverlayPreview.tsx  UpdateStatus.tsx
src/hooks/: useEventSub.ts  useFitWindowHeight.ts  useOverlaySync.ts  useStreakNudge.ts  useTwitchAuth.ts  useViewWindowSize.ts
src/lib/: sound.ts
src/lib/overlay/: types.ts
src/lib/platform/: nativeStateStorage.ts  nativeTwitchSession.ts  open.ts  window.ts
src/lib/streak/: engine.test.ts  engine.ts  types.ts
src/lib/twitch/: client.ts  constants.ts  eventsub.ts  normalizeSubEvent.ts
src/state/: useSubStreakStore.ts  useTwitchStore.ts
src/views/: GoalView.tsx  OverlayView.tsx  SettingsView.tsx
