[package]
name = "substreak"
version = "0.1.0"
description = "Set-and-forget Twitch daily sub goal + streak"
authors = ["dreadedzombie"]
edition = "2021"

[lib]
name = "substreak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
axum = "0.8"

[target.'cfg(not(target_os = "windows"))'.dependencies]
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
